# TGVDenoising

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  TGV WithoutHist.ipynb  main.cpp
.travis/: install.sh
CLI/: main.cpp
benchmarks/: benchmarks.cpp
cli/: main.cpp
src/: FilesRoutine.hpp  GPUBasedTotalGeneralizedVariation.cpp  GPUBasedTotalGeneralizedVariation.hpp  MathRoutine.hpp  StbInterfaceProxy.hpp  TotalGeneralizedVariation.cpp  TotalGeneralizedVariation.hpp  commonKernels.hpp
src/cl/: anorm.cl  anorm.h  calculateHist.cl  calculateHist.h  clear.cl  clear.h  common.hpp  copy.cl  copy.h  epsilon.cl  epsilon.h  gradient.cl  gradient.h  mulMatrixOnConstant.cl  mulMatrixOnConstant.h  project.cl  project.h  prox.cl  prox.h  sqrt.cl  sqrt.h  sumOfMatrix.cl  sumOfMatrix.h  transpondedEpsilon.cl  transpondedEpsilon.h  transpondedGradient.cl  transpondedGradient.h
src/cli/: main.cpp
src/kernels/: anorm.cl  anorm.h  calculateHist.cl  calculateHist.h  copy.cl  mulMatrixOnConstant.cl  mulMatrixOnConstant.h  project.h  prox.cl  sumOfMatrix.h  transpondedEpsilon.h  transpondedGradient.h
tests/: tests.cpp
